# EV-Optimisation

./: README.md  main.py  pyproject.toml
app/: app.py  callbacks.py  components.py
app/assets/: styles.css
docs/EV_Physics_Model/: main.tex  references.bib
examples/: acceleration_time.py  range.py
notebooks/: nsga.ipynb
src/ev_optimisation/: algo.py  algorithm.py  model.py  operators.py  physics_model.py  pipelines.py  plotting.py  vehicle.py
src/ev_optimisation/adapters/: __init__.py  dash_adapters.py
tests/: test_operators.py  test_physics_model.py  test_vehicle.py
tests/operators/: test_blx_alpha.py  test_crossover.py
