[tool.poetry]
name = "ev-optimisation"
version = "0.1.0"
description = "EV optimisation using genetic algorithms"
authors = ["Cameron <cameronwood858@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.2.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
jupyterlab = "^4.4.1"
matplotlib = "^3.10.1"
plotly = "^6.0.1"
pandas = "^2.2.3"
pyprojroot = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
